--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "lint-css": "stylelint --fix src/**/*.css",
     "lint-scss": "stylelint --fix src/**/*.scss",
-    "prettier": "prettier --write src/**/*.{js,ts,css}",
+    "prettier": "prettier --write src/**/*.{js,ts,css,scss}",
     "e2e": "ng e2e"
   },
   "private": true,
